--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ ul li {
 
 /* Footer */
 footer {
-    background-color: #333;
+    background-color:white;
     color: white;
     text-align: center;
     padding: 10px;
